--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,19 @@ html, body {
     height: 100%;
 }
 
+#form {
+    position: absolute;
+    left: 15px;
+    top: 675px;
+    top: 0px;
+    width: 250px;
+    height: 200px;
+    z-index: 2;
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 300;
+}
+
 #list {
     position: absolute;
     left: 15px;
