--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,52 @@
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#map {
+  height: 100%;
+}
+
+input {
+  position: fixed;
+  right: 1%;
+  top: .5%;
+  height: 40px;
+  width: 20%;
+  z-index: 2;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+#list-view {
+  position: fixed;
+  top: 4%;
+  right: 1%;
+  width: 20%;
+  background-color: #fff;
+  margin: 0;
+  padding: 0;
+  z-index: 2;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 600;
+  background-color: white;
+  cursor: pointer;
+}
+
+li {
+  margin-left: 20px;
+  padding: 2px 0;
+  font: 12px sans-serif;
+}
+
 /*html, body {
     height: 100%;
     margin: 0;
@@ -53,80 +102,4 @@
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 
-#pac-input {
-    background-color: #fff;
-    font-family: Roboto;
-    font-size: 15px;
-    font-weight: 300;
-    margin-left: 12px;
-    padding: 0 11px 0 13px;
-    text-overflow: ellipsis;
-    width: 500px;
-}
-
-#pac-input:focus {
-    border-color: #4d90fe;
-}
-
-.pac-container {
-    font-family: Roboto;
-}
-
-#type-selector {
-    color: #fff;
-    background-color: #4d90fe;
-    padding: 5px 11px 0px 11px;
-}
-
-#type-selector label {
-    font-family: Roboto;
-    font-size: 13px;
-    font-weight: 300;
-}
-
-    </style>
-    <title>Places Searchbox</title>
-    <style>
-      #target {
-    width: 345px;
 }*/
-
-* {
-  box-sizing: border-box;
-}
-
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-#map {
-  height: 100%;
-}
-
-input {
-  position: fixed;
-  right: 20px;
-  bottom: 30%;
-  height: 40px;
-  width: 200px;
-  font-size: 20px;
-}
-
-#list-view {
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  width: 100px;
-  background-color: #fff;
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  margin-left: 20px;
-  padding: 2px 0;
-  font: 12px sans-serif;
-}
