--- a/css/main.css
+++ b/css/main.css
@@ -15,10 +15,10 @@ body {
 
 input {
   position: fixed;
-  right: 1%;
-  top: .5%;
+  right: 20px;
+  top: 10px;
   height: 40px;
-  width: 20%;
+  width: 200px;
   z-index: 2;
   font-family: Roboto;
   font-size: 20px;
@@ -27,16 +27,15 @@ input {
 
 #list-view {
   position: fixed;
-  top: 4%;
-  right: 1%;
-  width: 20%;
+  top: 50px;
+  right: 20px;
+  width: 200px;
   background-color: #fff;
   margin: 0;
   padding: 0;
   z-index: 2;
-  font-family: Roboto;
-  font-size: 20px;
-  font-weight: 600;
+  font-size: 30px;
+  font-weight: 800;
   background-color: white;
   cursor: pointer;
 }
