--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,9 @@ html, body {
 }
 
 #content {
-    font-family: Roboto;
-    font-size: 10px;
-    font-weight: 300;
+  margin: 0;
+  padding: 0;
+  font-family: Roboto;
+  font-size: 13px;
+  font-weight: 500;
 }
